--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "autoprefixer": "^10.4.7",
     "nuxt": "3.0.0-rc.4",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
-  }
+  },
+  "dependencies": {}
 }
