--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@pinia/nuxt": "^0.4.0",
     "autoprefixer": "^10.4.7",
     "nuxt": "3.0.0-rc.4",
     "postcss": "^8.4.14",
