--- a/package.json
+++ b/package.json
@@ -4,17 +4,38 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@pinia/nuxt": "^0.4.0",
+    "@vue/test-utils": "^2.0.2",
+    "@vue/vue3-jest": "^28.1.0",
     "autoprefixer": "^10.4.7",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^28.1.3",
+    "jest": "^28.1.3",
     "nuxt": "3.0.0-rc.4",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
   },
-  "dependencies": {}
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "@vue/vue3-jest",
+      ".*\\.(js)$": "babel-jest"
+    }
+  }
 }
